Adding support for N number of Image Builder VMs to support pooling.

--- a/charts/image-builder-vm/templates/image-builder-vm.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm.yaml
@@ -1,15 +1,22 @@
+{{- $i := (.Values.imageBuilderVM.replicas | int) -}}
+{{- if not (ge $i 1) -}}
+{{- fail "imageBuilderVM.replicas must be greater than or equal to zero!" -}}
+{{- end -}}
+{{- range until $i -}}
+{{- $instance_name := printf "image-builder-%03d" $i -}}
+---
 apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachine
 metadata:
   annotations:
-    {{- toYaml .Values.imageBuilderVM.annotations | nindent 4 }}
-    {{- include "kubevirtRHELAnnotation" . | nindent 4 }}
-  name: image-builder
+    {{- toYaml $.Values.imageBuilderVM.annotations | nindent 4 }}
+    {{- include "kubevirtRHELAnnotation" $ | nindent 4 }}
+  name: {{ $instance_name }}
   namespace: rfe
   labels:
-    {{- toYaml .Values.imageBuilderVM.labels | nindent 4 }}
-    {{- include "common.labels.labels" . | nindent 4 }}
-    {{- include "kubevirtRHELLabel" . | nindent 4 }}
+    {{- toYaml $.Values.imageBuilderVM.labels | nindent 4 }}
+    {{- include "common.labels.labels" $ | nindent 4 }}
+    {{- include "kubevirtRHELLabel" $ | nindent 4 }}
 spec:
   dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1alpha1
@@ -23,21 +30,21 @@ spec:
             - ReadWriteOnce
           resources:
             requests:
-              storage: 100Gi
+              storage: {{ $.Values.imageBuilderVM.disk }}
           volumeMode: Filesystem
         source:
           http:
-            url: 'http://nexus:8081/repository/rfe-rhel-media/rhel-{{ .Values.rhel.version }}-x86_64-kvm.qcow2'
+            url: "http://nexus:8081/repository/rfe-rhel-media/rhel-{{- $.Values.rhel.version -}}-x86_64-kvm.qcow2"
   runStrategy: Always
   template:
     metadata:
       labels:
-        {{- toYaml .Values.imageBuilderVM.template.labels | nindent 8 }}
-        {{- include "kubevirtRHELLabel" . | nindent 8 }}
+        {{- toYaml $.Values.imageBuilderVM.template.labels | nindent 8 }}
+        {{- include "kubevirtRHELLabel" $ | nindent 8 }}
     spec:
       domain:
         cpu:
-          cores: {{ .Values.imageBuilderVM.cores }}
+          cores: {{ $.Values.imageBuilderVM.cores }}
           sockets: 1
           threads: 1
         devices:
@@ -68,19 +75,19 @@ spec:
           networkInterfaceMultiqueue: true
           rng: {}
         machine:
-          type: {{ .Values.imageBuilderVM.machine.type }}
+          type: {{ $.Values.imageBuilderVM.machine.type }}
         resources:
           requests:
-            memory: {{ .Values.imageBuilderVM.memory }}
-      hostname: image-builder
+            memory: {{ $.Values.imageBuilderVM.memory }}
+      hostname: {{ $instance_name }}
       networks:
         - name: nic-0
           pod: {}
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
-            name: image-builder-rootdisk
-          name: rootdisk
+            name: {{ printf "image-builder-dv-%03d-rootdisk" $i }}
+          name: {{ printf "image-builder-%03d-rootdisk" $i }}
         - cloudInitNoCloud:
             userData: |
               #cloud-config
@@ -105,3 +112,4 @@ spec:
         - name: serviceaccount
           serviceAccount:
             serviceAccountName: rfe-automation
+{{- end -}}
