--- a/charts/image-builder-vm/values.yaml
+++ b/charts/image-builder-vm/values.yaml
@@ -28,10 +28,12 @@ imageBuilderVM:
       workload.template.kubevirt.io/server: "true"
   machine:
     type: pc-q35-rhel8.4.0
-  cores: 8
-  memory: 16Gi
+  cores: 2
+  memory: 6Gi
+  disk: 150Gi
   composer:
     sources: []
+  replicas: 2
 
 gitRepository: https://github.com/redhat-cop/rhel-edge-automation-arch.git
 gitBranch: main
