--- a/charts/image-builder-vm/templates/image-builder-vm.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm.yaml
@@ -23,7 +23,7 @@ spec:
       kind: DataVolume
       metadata:
         creationTimestamp: null
-        name: {{ printf "image-builder-%03d-dv-rootdisk" $i }}
+        name: imagebuilder
       spec:
         pvc:
           accessModes:
@@ -86,7 +86,7 @@ spec:
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
-            name: {{ printf "image-builder-dv-%03d-rootdisk" $i }}
+            name: {{ printf "image-builder-%03d-rootdisk" $i }}
           name: {{ printf "image-builder-%03d-rootdisk" $i }}
         - cloudInitNoCloud:
             userData: |
