--- a/charts/image-builder-vm/templates/image-builder-vm.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm.yaml
@@ -4,6 +4,7 @@
 {{- end -}}
 {{- range until $i -}}
 {{- $instance_name := printf "image-builder-%03d" $i -}}
+{{- $root_disk := printf "image-builder-%03d-rootdisk" -}}
 ---
 apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachine
@@ -23,7 +24,7 @@ spec:
       kind: DataVolume
       metadata:
         creationTimestamp: null
-        name: imagebuilder
+        name: {{ $root_disk }}
       spec:
         pvc:
           accessModes:
@@ -52,7 +53,7 @@ spec:
             - bootOrder: 1
               disk:
                 bus: virtio
-              name: {{ printf "image-builder-%03d-rootdisk" $i }}
+              name: {{ $root_disk }}
             - disk:
                 bus: virtio
               name: cloudinitdisk
@@ -86,8 +87,8 @@ spec:
       terminationGracePeriodSeconds: 180
       volumes:
         - dataVolume:
-            name: {{ printf "image-builder-%03d-rootdisk" $i }}
-          name: {{ printf "image-builder-%03d-rootdisk" $i }}
+            name: {{ $root_disk }}
+          name: {{ $root_disk }}
         - cloudInitNoCloud:
             userData: |
               #cloud-config
