--- a/charts/image-builder-vm/templates/image-builder-vm.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm.yaml
@@ -113,4 +113,4 @@ spec:
         - name: serviceaccount
           serviceAccount:
             serviceAccountName: rfe-automation
-{{- end -}}
+{{ end }}
