Updating QuayRegistry CR to include managed TLS component.

--- a/charts/quay/values.yaml
+++ b/charts/quay/values.yaml
@@ -17,6 +17,8 @@ quay:
       managed: true
     - kind: route
       managed: true
+    - kind: tls
+      managed: true
 
 quayRegistryCR:
   annotations:
