Updating VM/VMI labels to support n number of image builder VMs.

--- a/charts/image-builder-vm/templates/image-builder-vm.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm.yaml
@@ -41,6 +41,8 @@ spec:
     metadata:
       labels:
         {{- toYaml $.Values.imageBuilderVM.template.labels | nindent 8 }}
+        kubevirt.io/domain: {{ $instance_name }}
+        vm.kubevirt.io/name: {{ $instance_name }}
         {{- include "kubevirtRHELLabel" $ | nindent 8 }}
     spec:
       domain:
