--- a/charts/image-builder-vm/values.yaml
+++ b/charts/image-builder-vm/values.yaml
@@ -23,8 +23,7 @@ imageBuilderVM:
     description: RHEL 8 With Image Builder
   template:
     labels:
-      kubevirt.io/domain: image-builder
-      vm.kubevirt.io/name: image-builder
+      app: image-builder
       workload.template.kubevirt.io/server: "true"
   machine:
     type: pc-q35-rhel8.4.0
