Dropping sources task. Updating Image Builder chart to generate k8s service per VM.

--- a/ansible/roles/image-builder/tasks/main.yaml
+++ b/ansible/roles/image-builder/tasks/main.yaml
@@ -189,5 +189,5 @@
     - cockpit
     - http
 
-- name: Manage Composer Sources
-  ansible.builtin.include_tasks: composer-sources.yaml
+#- name: Manage Composer Sources
+#  ansible.builtin.include_tasks: composer-sources.yaml
