instance_expected_count->image_builder_replicas. Updating Job to include extra var for image_builder_replicas.

--- a/ansible/roles/openshift-image-builder-imi/tasks/main.yaml
+++ b/ansible/roles/openshift-image-builder-imi/tasks/main.yaml
@@ -17,7 +17,7 @@
   register: vmi_results
   retries: 60
   until:
-    - vmi_results.resources | default([]) | list | count == instance_expected_count
+    - vmi_results.resources | default([]) | list | count == image_builder_replicas
 
 - name: Generate In-Memory Inventory of Image Builder VM
   ansible.builtin.add_host:
