--- a/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm-ansible-job.yaml
@@ -28,6 +28,8 @@ spec:
               value: $GIT_DIRECTORY/ansible/ansible.cfg
             - name: GIT_BRANCH
               value: {{ $.Values.gitBranch | quote }}
+            - name: IMAGE_BUILDER_REPLICAS
+              value: {{ $.Values.imageBuilderVM.replicas | quote }}
           command:
             - /bin/bash
             - -c
@@ -35,7 +37,7 @@ spec:
               mkdir -p $GIT_DIRECTORY
               git clone -b $GIT_BRANCH $GIT_URL $GIT_DIRECTORY
               ansible-galaxy collection install -r $GIT_DIRECTORY/ansible/collections/requirements.yaml
-              ansible-playbook -vvvv -u cloud-user --private-key=$SSH_KEY $GIT_DIRECTORY/$ANSIBLE_PLAYBOOK
+              ansible-playbook -u cloud-user --private-key=$SSH_KEY $GIT_DIRECTORY/$ANSIBLE_PLAYBOOK -e image_builder_replicas=$IMAGE_BUILDER_REPLICAS
           volumeMounts:
             - name: image-builder-ssh-key
               mountPath: /var/secrets/image-builder-ssh-key
