--- a/ansible/roles/pipeline-scheduler/tasks/main.yaml
+++ b/ansible/roles/pipeline-scheduler/tasks/main.yaml
@@ -54,3 +54,37 @@
   run_once: yes
   when:
     - pool_idle_hosts | count == 0
+
+- name: Query VirtualMachineInstances
+  community.kubernetes.k8s_info:
+    api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
+    api_version: kubevirt.io/v1alpha3
+    ca_cert: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+    host: https://kubernetes.default.svc
+    kind: VirtualMachineInstance
+    label_selectors:
+      - app=image-builder
+    name: "{{ pipeline_target_host }}"
+    namespace: rfe
+    validate_certs: yes
+  become: no
+  delay: 10
+  delegate_to: localhost
+  register: vmi_results
+  retries: 60
+  until:
+    - vmi_results.resources | list | length == 1
+    - >
+      vmi_results.resources |
+        json_query('[*].status.conditions[?type==`Ready`].status') |
+        flatten |
+        select('match', 'True') |
+        list |
+        length == 1
+
+- name: Add Target Host to Inventory
+  ansible.builtin.add_host:
+    ansible_ssh_host: "{{ vmi_results.resources[0].status.interfaces[0].ipAddress }}"
+    ansible_ssh_port: "22"
+    name: pipeline_target_host
+  delegate_to: localhost
