--- a/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
@@ -21,6 +21,8 @@ spec:
   results:
     - name: build-commit
       description: Commit ID of the Build
+    - name: image-builder-host
+      description: Image Builder Host used for Pipeline Run
   steps:
     - name: build-image-playbook
       image: image-registry.openshift-image-registry.svc:5000/rfe/ansible-rfe-runner:latest
@@ -34,6 +36,7 @@ spec:
             --private-key=/var/secrets/image-builder-ssh/ssh-privatekey \
             -e blueprint_source_dir=$(params.blueprint-dir) \
             -e build_commit_output_file=$(results.build-commit.path) \
+            -e image_builder_host_output_file=$(results.image-builder-host.path) \
             playbooks/oci-create-image.yaml
       command:
         - /bin/bash
