--- a/ansible/playbooks/oci-push-image.yaml
+++ b/ansible/playbooks/oci-push-image.yaml
@@ -1,14 +1,23 @@
 - name: Generate In-Memory Inventory of OpenShift VMs
   gather_facts: no
   hosts: localhost
-  roles:
-    - role: openshift-image-builder-imi
-      tags: openshift-image-builder-imi
+  tasks:
+    - name: Assert image_builder_host is Defined
+      ansible.builtin.assert:
+        that:
+          - image_builder_host is defined
+
+    - name: Add Target Host to Inventory
+      ansible.builtin.add_host:
+        ansible_ssh_host: "{{ image_builder_host }}"
+        ansible_ssh_port: "22"
+        name: pipeline_target_host
+      delegate_to: localhost
 
 - name: Push OCI Image
   become: yes
   gather_facts: no
-  hosts: image-builder
+  hosts: pipeline_target_host
   tasks:
     - name: Push OCI Image
       include_role:
