--- a/charts/rfe-pipelines/templates/rfe-oci-build-auto-iso-task.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-build-auto-iso-task.yaml
@@ -11,15 +11,18 @@ spec:
   workspaces:
     - name: workspace
   params:
-    - name: kickstart-url
-      description: URL Containing the Kickstart File
+    - name: build-commit-id
+      description: Commit ID of the RFE Installer Build
+      type: string
+    - name: image-builder-host
+      description: Image Builder Host used for Pipeline Run
       type: string
     - name: image-builder-secret
       description: Name of the Secret Containing the SSH Key for the Image Builder Host
       default: "image-builder-ssh-key"
       type: string
-    - name: build-commit-id
-      description: Commit ID of the RFE Installer Build
+    - name: kickstart-url
+      description: URL Containing the Kickstart File
       type: string
   results:
     - name: iso-url
@@ -37,6 +40,7 @@ spec:
             --private-key=/var/secrets/image-builder-ssh/ssh-privatekey \
             -e kickstart_url=$(params.kickstart-url) \
             -e build_commit_id=$(params.build-commit-id) \
+            -e image_builder_host=$(params.image-builder-host) \
             -e iso_url_output_file=$(results.iso-url.path) \
             playbooks/oci-build-auto-iso.yaml
       command:
