--- a/ansible/playbooks/oci-create-image.yaml
+++ b/ansible/playbooks/oci-create-image.yaml
@@ -15,6 +15,10 @@
   gather_facts: no
   hosts: pipeline_target_host
   tasks:
+    - name: Configure Content Sources
+      ansible.builtin.include_role:
+        name: image-builder-content-sources
+
     - name: Build OCI Image
-      include_role:
+      ansible.builtin.include_role:
         name: oci-build-image
