--- a/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
@@ -18,6 +18,9 @@ spec:
       description: Name of the secret containing the SSH key for the image builder
       default: "image-builder-ssh-key"
       type: string
+    - name: image-builder-sources
+      description: JSON object with list of Image Builder sources
+      type: string
   results:
     - name: build-commit
       description: Commit ID of the Build
@@ -37,6 +40,7 @@ spec:
             -e blueprint_source_dir=$(params.blueprint-dir) \
             -e build_commit_output_file=$(results.build-commit.path) \
             -e image_builder_host_output_file=$(results.image-builder-host.path) \
+            -e image_builder_sources=$(params.image-builder-sources) \
             playbooks/oci-create-image.yaml
       command:
         - /bin/bash
