--- a/charts/rfe-pipelines/values.yaml
+++ b/charts/rfe-pipelines/values.yaml
@@ -21,28 +21,12 @@ pipelines:
     kickstarts:
       repoURL: https://github.com/redhat-cop/rhel-edge-automation-arch.git
       targetRevision: kickstarts
-  sources: |
+  rhsm_repositories: |
     {
-      "sources": {
-        "appstream": {
-          "id": "appstream",
-          "name": "appstream",
-          "type": "yum-baseurl",
-          "url": "https://cdn.redhat.com/content/dist/rhel8/8.5/x86_64/appstream/os",
-          "check_gpg": true,
-          "check_ssl": true,
-          "system": true,
-          "rhsm": false
-        },
-        "baseos": {
-          "id": "baseos",
-          "name": "baseos",
-          "type": "yum-baseurl",
-          "url": "https://cdn.redhat.com/content/dist/rhel8/8.5/x86_64/baseos/os",
-          "check_gpg": true,
-          "check_ssl": true,
-          "system": true,
-          "rhsm": false
-        }
-      }
+      "repositories": [
+        "rhel-8-for-x86_64-baseos-rpms",
+        "rhel-8-for-x86_64-appstream-rpms"
+      ]
     }
+  additional_content_sources: |
+    {}
