--- a/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
@@ -18,8 +18,11 @@ spec:
       description: Name of the secret containing the SSH key for the image builder
       default: "image-builder-ssh-key"
       type: string
-    - name: image-builder-sources
-      description: JSON object with list of Image Builder sources
+    - name: additional-content-sources
+      description: JSON object with list of Additional Image Builder sources
+      type: string
+    - name: rhsm-repositories
+      description: JSON object with list of RHEL Repos
       type: string
   results:
     - name: build-commit
@@ -40,7 +43,8 @@ spec:
             -e blueprint_source_dir=$(params.blueprint-dir) \
             -e build_commit_output_file=$(results.build-commit.path) \
             -e image_builder_host_output_file=$(results.image-builder-host.path) \
-            -e image_builder_sources=$(params.image-builder-sources) \
+            -e additional_content_sources=$(params.additional-content-sources) \
+            -e rhsm_repositories=$(params.rhsm-repositories) \
             playbooks/oci-create-image.yaml
       command:
         - /bin/bash
