--- a/ansible/roles/image-builder-content-sources/tasks/reconfigure-repositories.yaml
+++ b/ansible/roles/image-builder-content-sources/tasks/reconfigure-repositories.yaml
@@ -1,6 +1,6 @@
 - name: Generate List of RHSM Repositories
   ansible.builtin.set_fact:
-    rhsm_repositories_list: "{{ rhsm_repositories | b64decode | from_json | json_query('repositories') | list }}"
+    rhsm_repositories_list: "{{ ((rhsm_repositories | b64decode | from_json) | from_json).repositories | list }}"
 
 - name: Reconfigure RHSM Repositories
   community.general.rhsm_repository:
